fix: prevent measurement page render loop
